# namada-sdk-examples

./: README.md
light-sdk-query/: Cargo.toml
light-sdk-query/src/: main.rs
transfer-example/: .env  Cargo.toml
transfer-example/src/: main.rs
tx-decode/: Cargo.toml
tx-decode/src/: main.rs
